# robotframework-imagehorizonlibrary

./: .gitignore  Dockerfile  Dockerfile.arm64  README.md  conftest.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml  tests.yml  update-docs.yml
docs/: ImageHorizonLibrary.html  index.html
scripts/: open_image_debugger.py
src/ImageHorizonLibrary/: __init__.py  errors.py  utils.py  version.py
src/ImageHorizonLibrary/interaction/: __init__.py  _keyboard.py  _mouse.py  _operating_system.py
src/ImageHorizonLibrary/recognition/: __init__.py  _recognize_images.py  _screenshot.py
src/ImageHorizonLibrary/recognition/ImageDebugger/: __init__.py  image_debugger_controller.py  image_debugger_model.py  image_debugger_view.py  image_manipulation.py  template_matching_strategies.py
tests/atest/: calculator.robot  run_tests.py
tests/utest/: run_tests.py  test_image_debugger_controller.py  test_image_debugger_model.py  test_image_manipulation.py  test_keyboard.py  test_locate_keyword_strategies.py  test_main_class.py  test_mouse.py  test_operating_system.py  test_pyautogui_image_not_found.py  test_recognize_images.py  test_screenshot.py
